[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hela-mem"
version = "0.1.0"
description = "HeLa-Mem code for LongMemEval"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "openai",
  # 外部化 embedding 后移除 sentence-transformers/torch
  # LivMemory 服务封装新增依赖见根 requirements.txt(fastapi/pymongo/uvicorn)
]

[tool.setuptools]
packages = ["hela_mem"]
